WIP content / fix new creation campaign / overflow name on dice histo fix

--- a/src/styles/diceHisto.css
+++ b/src/styles/diceHisto.css
@@ -49,17 +49,13 @@
 }
 .bubbleHisto span:first-child {
   max-width: 100px;
-  text-overflow: clip;
-  text-overflow: ellipsis;
-  text-overflow: "…";
-  text-overflow: fade;
-  text-overflow: fade(10px);
-  text-overflow: fade(5%);
-  overflow: hidden;
 }
 .histoLeftSide {
   display: flex;
   flex-direction: column;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .histoLeftSide span:first-child {
   font-size: 16px;
